tests/snapshots/hub/secret_like_axolotl_extra_not_published.snap
---
source: src/hub/card.rs
---
---
base_model: Qwen/Qwen3-0.6B
base_model_relation: finetune
library_name: transformers
pipeline_tag: text-generation
tags:
- overbrainer
- distillation
---

[![overbrainer](https://raw.githubusercontent.com/nayrosk/overbrainer/main/docs/assets/hf-banner.webp)](https://github.com/nayrosk/overbrainer)

Distilled with [overbrainer](https://github.com/nayrosk/overbrainer) [![overbrainer](https://img.shields.io/badge/distilled%20with-overbrainer-E93D82)](https://github.com/nayrosk/overbrainer)

# nayrosk/rust-mentor

Qwen/Qwen3-0.6B fully fine-tuned on 1 questions answered by deepseek/deepseek-v4-flash:thinking.

## Use it

```python
from transformers import AutoModelForCausalLM

model = AutoModelForCausalLM.from_pretrained("nayrosk/rust-mentor")
```

## How it was made

overbrainer wrote questions on the topics below with the generator model, kept the parent model's answers, then fine-tuned the base model on them with Axolotl.

The parent model reasons, but the chat template of this run does not render reasoning_content, so the reasoning was left out of training.

| | |
|---|---|
| Parent model | deepseek/deepseek-v4-flash:thinking |
| Generator model | deepseek/deepseek-v4-flash |
| Base model | Qwen/Qwen3-0.6B |
| Adapter | none (full fine-tune) |
| Examples | 1 train, 0 eval |

Topics:

- **ownership**: Rust ownership, borrowing and lifetimes
- **async**: Async Rust with tokio: futures, tasks and cancellation

## Reproduce

```sh
cargo install --locked overbrainer
```

With these sections of overbrainer.toml (project, providers, targets and keys left out), then `overbrainer run`:

```toml
[[topics]]
name = "ownership"
description = "Rust ownership, borrowing and lifetimes"
subtopics = 8
questions_per_subtopic = 30

[[topics]]
name = "async"
description = "Async Rust with tokio: futures, tasks and cancellation"
subtopics = 8
questions_per_subtopic = 30

[roles.generator]
provider = "openrouter"
model = "deepseek/deepseek-v4-flash"
reasoning = false
max_tokens = 16384

[roles.parent]
provider = "openrouter"
model = "deepseek/deepseek-v4-flash:thinking"
reasoning = true
max_tokens = 16384

[training]
base_model = "Qwen/Qwen3-0.6B"
adapter = "full"
epochs = 3
learning_rate = 0.0002
lora_r = 16
lora_alpha = 32
lora_dropout = 0.05
sequence_len = 4096
micro_batch_size = 2
gradient_accumulation_steps = 4
optimizer = "adamw_torch_fused"
lr_scheduler = "cosine"
sample_packing = true
evals_per_epoch = 4
saves_per_epoch = 1
merge = false

[training.axolotl_extra]
chat_template = "chatml"
train_on_inputs = false
warmup_ratio = 0.1

[pipeline]
concurrency = 8
max_retries = 5
dedup_threshold = 0.8
eval_ratio = 0.1
seed = 42
include_system_prompt = false
embedding_threshold = 0.9
question_batch_size = 10
request_timeout_secs = 600
```

See the [overbrainer docs](https://github.com/nayrosk/overbrainer#readme).

---

[overbrainer](https://github.com/nayrosk/overbrainer) distills a big LLM into a small one from your terminal. If this model is useful, a star on [GitHub](https://github.com/nayrosk/overbrainer) helps.

<!-- overbrainer:card -->
